# whynotcats.com

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bundle.nu  index.html  manifest.webmanifest
src/: main.rs
src/components/: icons.rs  mod.rs  nav.rs  project.rs
src/one-pagers/: astro-cal.md  bento-generator.md  bread-assistant.md  cat-linkedin-bot.md  social-media-feed.md  trip-summary.md  twitch-games.md
