[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3.61"
markdown = "1.0.0-alpha.7"
# js-sys = "0.3.60"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version="1.4", features = ["macros"] }
# reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# wasm-bindgen-futures = "0.4"
# log = "0.4.6"
# wasm-logger = "0.2.0"
# icalendar = "0.13.3"
# features found in https://finnbear.github.io/yew_icons/
yew_icons = { version = "0.6.1", features = [ "BootstrapMoonStars", "FontAwesomeSolidCat", "BootstrapGithub", "BootstrapJournalBookmarkFill", "BootstrapCameraFill", "BootstrapTwitter", "BootstrapMastodon", "FontAwesomeSolidMapLocationDot", "BootstrapTwitch", "FontAwesomeSolidJarWheat", "BootstrapLinkedin", "BootstrapColumnsGap", "BootstrapInfoCircleFill"] }
